// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should render the Button component with type button 1`] = `
<DocumentFragment>
  <button
    class="c-btn button"
    type="submit"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button component Should render the Button component with type button 2`] = `
<DocumentFragment>
  <button
    class="c-btn"
    type="submit"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button component Should render the Button component with type button 3`] = `
<DocumentFragment>
  <a
    class="c-btn link"
    href="https://google.com"
    rel="noopener noreferrrer"
    target="_blank"
  >
    Link
  </a>
</DocumentFragment>
`;
